--- a/test.html
+++ b/test.html
@@ -34,6 +34,7 @@
                 console.log("*** RESOURCE BUILT");
                 window['testModel'] = res;
                 console.log("*** APPLYING BINDINGS");
+                res.testUrl = "http://something.org/hello";
                 ko.applyBindings(res)
             });
 
@@ -56,7 +57,7 @@
     });
   </script>
 
-  <p id='theTestP' data-bind="text: <http://test.com/title>"></p>
+  <p id='theTestP' data-bind="text: <http://test.com/title>, about: testUrl"></p>
   <!-- <p data-bind="text: testHello"></p> -->
 
 </body>
