working with RDF resources inside templates WIP

--- a/test3.html
+++ b/test3.html
@@ -1,10 +1,11 @@
 <html>
 <head>
   <title>test semantic knockout.js</title>
-  <script type='text/javascript' src="./build/output/knockout-latest.debug.js"></script>
-  <script type='text/javascript' src="./deps/rdf_store.js"></script>
-  <script type='text/javascript' src="./deps/sem_ko.js"></script>
   <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script type='text/javascript' src='http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js'></script>
+  <script type='text/javascript' src="./deps/rdf_store.js"></script>
+  <script type='text/javascript' src="./build/output/knockout-latest.debug.js"></script>
+  <script type='text/javascript' src="./deps/sem_ko.js"></script>
 </head>
 <body>
 
@@ -12,15 +13,18 @@
     $(document).ready(function(){
 
         var testData = "INSERT DATA { <http://test.com/a> <http://test.com/title> 'test resource a' ; <http://test.com/count> '1'.\
-                                      <http://test.com/a> <http://test.com/related> <http://test.com/c>.\
-                                      <http://test.com/b> <http://test.com/title> 'test resource b' ; <http://test.com/count> '2' . \
-                                      <http://test.com/b> <http://test.com/related> <http://test.com/d>.\
+                                      <http://test.com/a> <http://test.com/related1> <http://test.com/c>.\
+                                      <http://test.com/a> <http://test.com/related2> <http://test.com/d>.\
                                       <http://test.com/c> <http://test.com/title> 'test resource c' ; <http://test.com/count> '3' .\
-                                      <http://test.com/d> <http://test.com/title> 'test resource d' ; <http://test.com/count> '4' . }";
+                                      <http://test.com/d> <http://test.com/title> 'test resource d' ; <http://test.com/count> '4' .\
+                                      <http://test.com/e> <http://test.com/title> 'test resource 3' ; <http://test.com/count> '2' .\
+                                      <http://test.com/e> <http://test.com/related1> <http://test.com/c>.\
+                                      <http://test.com/e> <http://test.com/related2> <http://test.com/d>. }";
 
         var test = function() {
 
-            var daModel = {'currentResource': ko.observable("<http://test.com/a>")};
+            var daModel = {'currentResource': ko.observable("<http://test.com/a>"),
+                           'selectedTemplate': ko.observable('1')};
             window['daModel'] = daModel;
             console.log("*** initiating the PAGE");
             sko.traceResources(jQuery("#to-trace")[0],daModel, function(){
@@ -28,7 +32,7 @@
                 sko.traceRelations(jQuery("#to-trace")[0],daModel, function(){
                     console.log("*** TRACED RELATIONS!!!");
 
-                    ko.applyBindings({});
+                    ko.applyBindings(daModel);
 
                     window['updateRootResource'] = function(newUri) {
                         sko.about['0'](newUri);
@@ -55,11 +59,21 @@
     });
   </script>
 
+  <script id='test_template' type='text/html'>
+    {{if selectedTemplate() === '1'}}
+      <span id='the-related-thing' rel='<http://test.com/related1>'>
+        <p data-bind="text: <http://test.com/count>"></p>      
+      </span>    
+    {{else}}
+      <span id='the-related-thing' rel='<http://test.com/related2>'>
+        <p data-bind="text: <http://test.com/count>"></p>      
+      </span>    
+    {{/if}}
+  </script> 
+
   <div id="to-trace" about="currentResource">
     <p data-bind="text: <http://test.com/title>"></p>
-    <span id='the-related-thing' rel='<http://test.com/related>'>
-      <p data-bind="text: <http://test.com/count>"></p>      
-    </span>
+    <span data-bind='template: "test_template"'></span>
   </div>
 
 </body>
