support for literals with language

--- a/tests/index.html
+++ b/tests/index.html
@@ -165,5 +165,17 @@
           <ul id='philosphers-list' data-bind='template: "phiolosophers-template-17"'></ul>   
         </div>
 
+        <div id='test18'>
+          <span about='currentResource'>
+            <p data-bind='text: <http://test.com/title>'></p>
+          </span>
+        </div>
+
+        <div id='test19'>
+          <span about='currentResource'>
+            <p data-bind='text: <http://test.com/title>'></p>
+          </span>
+        </div>
+
 </body>
 </html>
