fixed creation of nodes bug, modification of properties not present in the triple store

--- a/tests/index.html
+++ b/tests/index.html
@@ -202,5 +202,12 @@
           </span>
         </div>
 
+        <div id='test25'>
+          <span about='<http://test.com/about1>'>
+            <p id='test25prop1' data-bind='text: <http://xmlns.com/foaf/0.1/name>'></p>
+            <input id='test25prop2' data-bind='value: <http://test.com/value>'></input>
+          </span>
+        </div>
+
 </body>
 </html>
