--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	  SemanticKO is a JavaScript library for building complex JavaScript applications in a declarative way on top of a <a href='http://www.w3.org/RDF/'>RDF</a> data layer. The library is open source and <a href='https://github.com/antoniogarrote/semantic-ko'>can be downloaded from github</a>.
 	</p>
 	<p>
-	  SemanticKO is built on top of <a href='http://knockoutjs.com/'>KnockoutJS</a>, a JavaScript library for building applications using the <a href='http://en.wikipedia.org/wiki/MVVM'>Model View ViewModel (MVVM)</a> architectural pattern. It also uses <a href='https://github.com/antoniogarrote/rdfstore-js'>RDFStore-JS</a> a pure JavaScript of a RDF store as the foundation of the data layer.
+	  SemanticKO extends <a href='http://knockoutjs.com/'>KnockoutJS</a>, a JavaScript library for building applications using the <a href='http://en.wikipedia.org/wiki/MVVM'>Model View ViewModel (MVVM)</a> architectural pattern. It also uses <a href='https://github.com/antoniogarrote/rdfstore-js'>RDFStore-JS</a>, a pure JavaScript implementation of a RDF store, as the foundation for the library data layer.
 	</p>
 	<p>
 	  A detailed description of the library can be <a href='http://antoniogarrote.com/semantic_ko/'>found here</a>.
