--- a/example1.html
+++ b/example1.html
@@ -32,7 +32,7 @@
   <script type='text/javascript'>
     jQuery(document).ready(function(){
 	var demo = {
-	    data: '{\n  "@subject": "http://www.w3.org/People/Berners-Lee/card#i",\n  "foaf:name": "Tim Berners Lee",\n  "@context": {"foaf": "http://xmlns.com/foaf/0.1/"}\n}',
+	    data: '{\n  "@id": "http://www.w3.org/People/Berners-Lee/card#i",\n  "foaf:name": "Tim Berners Lee",\n  "@context": {"foaf": "http://xmlns.com/foaf/0.1/"}\n}',
 	    viewModel: 'var viewModel = {};\nsko.applyBindings("#example1", viewModel)',
 	    view: '<div id="example1">\n  <span about="<http://www.w3.org/People/Berners-Lee/card#i>">\n    <p data-bind="text: [foaf:name]"></p>\n  </span>\n</div>'
 	};
@@ -77,7 +77,7 @@
 			    eval(code);
 			    jQuery('#sparql-button').removeAttr('disabled');
 			} else {
-			    console.log("Error loading data");
+			   console.log("Error loading data");
 			}
 		    });
 		});
