--- a/example2.html
+++ b/example2.html
@@ -47,9 +47,9 @@
    "tests:inventorOf":"tests:Lisp",\n\
    "@context":{\n\
      "tests": "http://semanticko.org/examples/things/",\n\
-     "foaf:name": {"@id": "http://xmlns.com/foaf/0.1/", "@type": "@iri"}\n\
+     "foaf:name": {"@id": "http://xmlns.com/foaf/0.1/", "@type": "@id"}\n\
      "tests:inventorOf": {"@id": "http://semanticko.org/examples/things/inventorOf",\n\
-                          "@type": "@iri"}\n\
+                          "@type": "@id"}\n\
    }\n\
  }\n\
 ]',
