--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,7 @@
 	<!-- Your project file goes here -->
         <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
         <script type='text/javascript' src='http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js'></script>
-        <script type='text/javascript' src="../deps/rdf_store.js"></script>
+	<script type="text/javascript" src="https://raw.github.com/antoniogarrote/rdfstore-js/master/dist/browser/rdf_store.js"></script>
         <script type='text/javascript' src="../build/output/knockout-latest.debug.js"></script>
         <script type='text/javascript' src="./tests.js"></script>
 </head>
