--- a/tests/index.html
+++ b/tests/index.html
@@ -226,5 +226,11 @@
             <p class="nullified" data-bind='text: <http://test.com/property>'></p>
           </span>
         </div>
+
+        <div id='test28'>
+          <span about='<http://test.com/about1>'>
+            <a class="present" data-bind='attr: {href: [test:dst]}, text: [test:title]'></a>
+          </span>
+        </div>
 </body>
 </html>
